crates/stano-di-macros/tests/ui/component_on_non_trait.rs
use stano_di_macros::component;

#[component]
struct NotATrait;

fn main() {}
